RESOLVED FIXED98648
DumpRenderTree should have --pixel-tests option again
https://bugs.webkit.org/show_bug.cgi?id=98648
Summary DumpRenderTree should have --pixel-tests option again
Balazs Kelemen
Reported 2012-10-08 06:51:39 PDT
It turned out that it is useful to have a way to turn on pixel testing from the command line. See bug 95098 for example. I also often feel the luck of it when working with pixel tests. Let's add it back.
Attachments
Patch (14.42 KB, patch)
2012-10-08 07:07 PDT, Balazs Kelemen
no flags
Patch (14.42 KB, patch)
2012-10-08 09:02 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-10-08 07:07:25 PDT
Build Bot
Comment 2 2012-10-08 07:15:59 PDT
Balazs Kelemen
Comment 3 2012-10-08 09:02:32 PDT
Eric Seidel (no email)
Comment 4 2012-10-08 11:33:47 PDT
Why is this useful? Pixel tests require a harness to parse them from the input stream and write out the png files, etc, no?
Dirk Pranke
Comment 5 2012-10-08 11:58:37 PDT
(In reply to comment #4) > Why is this useful? Pixel tests require a harness to parse them from the input stream and write out the png files, etc, no? While that would seem to be true, I have heard the complaint from many people that they miss the flag. I guess maybe they extract the PNGs manually or something?
Balazs Kelemen
Comment 6 2012-10-09 01:33:33 PDT
(In reply to comment #5) > (In reply to comment #4) > > Why is this useful? Pixel tests require a harness to parse them from the input stream and write out the png files, etc, no? > > While that would seem to be true, I have heard the complaint from many people that they miss the flag. I guess maybe they extract the PNGs manually or something? I often just check whether it is crashing or not or check if the output is an empty image (this is recognizable from the output).
Balazs Kelemen
Comment 7 2012-10-24 00:54:12 PDT
Anyone up to review this?
Dirk Pranke
Comment 8 2012-10-24 14:35:36 PDT
Comment on attachment 167543 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=167543&action=review Sorry, this must've fallen off my radar :(. > Tools/DumpRenderTree/qt/DumpRenderTreeMain.cpp:69 > +// We only support -v, -p, --pixel-tests, --stdout, --stderr and -, all the others will be -p doesn't actually work, does it? just --pixel-tests? Ideally we'd support -p everywhere as well.
Balazs Kelemen
Comment 9 2012-11-06 02:14:50 PST
(In reply to comment #8) > (From update of attachment 167543 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=167543&action=review > > Sorry, this must've fallen off my radar :(. > > > Tools/DumpRenderTree/qt/DumpRenderTreeMain.cpp:69 > > +// We only support -v, -p, --pixel-tests, --stdout, --stderr and -, all the others will be > > -p doesn't actually work, does it? just --pixel-tests? > > Ideally we'd support -p everywhere as well. Landed in http://trac.webkit.org/changeset/133574. I added -p to Qt's DRT and WTR, but I didn't do it for other ports.
Note You need to log in before you can comment on or make changes to this bug.